# telepathic

./: .all-contributorsrc  .cursorignore  .env  .envrc  .gitattributes  .gitignore  .log4brains.yml  .mcp.json  Cargo.toml  README.md  deny.toml  devenv.nix  devenv.yaml  eslint.config.mjs  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  pyproject.toml  skills-lock.json  socket.yaml  storm-workspace.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/indexer/: extract.rs  lsp_lang.rs
bindings/python-sdk/: Cargo.toml  README.md  project.json  pyproject.toml
bindings/python-sdk/src/native/: binding_sdk.rs  lib.rs
bindings/python-sdk/src/native/types/: mod.rs  py_regex.rs
bindings/python-sdk/src/native/utils/: mod.rs  pattern_filter.rs  (+1 more)
bindings/python-sdk/src/telepathic/: __init__.py  _telepathic_pyo3.pyi  engine.py
bindings/python-sdk/tests/unit/: test_binding_options.py  test_native_utils.py
crates/core/: Cargo.toml  README.md  project.json
crates/core/src/: context.rs  error.rs  lib.rs  normalized_options.rs  options.rs  repository.rs  source_code.rs
crates/core/src/inputs/: export_okf_input.rs  index_repository_input.rs  list_projects_input.rs  mod.rs  query_graph_input.rs  read_graph_input.rs  recall_input.rs  search_graph_input.rs  search_input.rs  store_input.rs  trace_graph_input.rs  write_graph_input.rs
crates/core/src/log/: log_level.rs  log_message.rs  mod.rs
crates/core/src/outputs/: export_okf_output.rs  get_schema_output.rs  get_session_output.rs  get_settings_output.rs  index_repository_output.rs  list_projects_output.rs  list_repositories_output.rs  mod.rs  query_graph_output.rs  read_graph_output.rs  recall_output.rs  search_graph_output.rs  search_output.rs  store_output.rs  trace_graph_output.rs  write_graph_output.rs
crates/core/src/session/: device.rs  mod.rs  user.rs
crates/core/src/settings/: env_paths.rs  mod.rs  mode.rs
crates/embedding/: Cargo.toml  README.md  project.json
crates/embedding/src/: chunk.rs  config.rs  document.rs  download.rs  engine.rs  error.rs  index.rs  lib.rs  mock.rs  onnx.rs  pool.rs  search.rs  voyage.rs
crates/engine/: Cargo.toml  project.json
crates/engine/src/: engine.rs  error.rs  lib.rs
crates/engine/src/index/: discover.rs  extract.rs  mod.rs
crates/lsp/: Cargo.toml  README.md  arena.c  arena.h  build.rs  cbm.h  dispatch.c  helpers.c  helpers.h  project.json  wrapper.h
crates/lsp/src/: convert.rs  error.rs  ffi.rs  language.rs  lib.rs  resolve.rs
crates/models/: Cargo.toml  README.md  project.json
crates/models/src/: data.rs  data_point.rs  document.rs  document_chunk.rs  embedding.rs  entity.rs  execution.rs  lib.rs  meta.rs
crates/napi-rs/: Cargo.toml  README.md  build.rs  project.json
crates/napi-rs/src/: binding_engine.rs  lib.rs
crates/napi-rs/src/types/: binding_definition.rs  binding_env_paths.rs  binding_error.rs  binding_input.rs  binding_log.rs  binding_options.rs  binding_output.rs  js_callback.rs  mod.rs
crates/napi-rs/src/utils/: mod.rs  to_binding_error.rs  trace_subscriber_guard.rs
crates/python-sdk/: Cargo.toml  README.md  project.json
crates/python-sdk/src/: binding_engine.rs
crates/python-sdk/src/types/: binding_env_paths.rs  binding_error.rs  binding_input.rs  binding_output.rs  binding_session.rs
crates/python-sdk/src/utils/: to_binding_error.rs  trace_subscriber_guard.rs
crates/semantic/: Cargo.toml  README.md  project.json
crates/semantic/src/: ast_minhash.rs  config.rs  constants.rs  corpus.rs  diffusion.rs  function.rs  lib.rs  minhash.rs  nomic_pretrained.rs  pretrained.rs  score.rs  tokenize.rs  vector.rs
crates/storage/: Cargo.toml  README.md  project.json
crates/storage/src/: error.rs  execution_metadata.rs  execution_store.rs  fs_execution_store.rs  in_memory_execution_store.rs  indexed_execution_store.rs  lib.rs
crates/storage/src/ladybug/: index.rs  mod.rs
crates/tracing/: Cargo.toml  README.md  project.json
crates/tracing/src/: debug_data_propagate_layer.rs  debug_formatter.rs  lib.rs  macros.rs  tracing.rs  type_alias.rs
crates/tracing/src/actions/: hook_call_end.rs  hook_call_start.rs  mod.rs  session_meta.rs  store_end.rs  store_start.rs
crates/tracing/src/session/: generate_session_id.rs  mod.rs
crates/tracing/src/types/: mod.rs
crates/tree-sitter/: Cargo.toml  README.md  build.rs  project.json
crates/tree-sitter/grammars/apex/: node-types.json
crates/tree-sitter/grammars/crystal/: scanner.c
crates/tree-sitter/grammars/dotenv/: node-types.json
crates/tree-sitter/grammars/gdscript/: node-types.json
crates/tree-sitter/grammars/objectscript_routine/: LICENSE  scanner.c
crates/tree-sitter/grammars/requirements/: node-types.json
crates/tree-sitter/grammars/rescript/: node-types.json
crates/tree-sitter/grammars/soql/: node-types.json
crates/tree-sitter/grammars/sosl/: node-types.json
crates/tree-sitter/src/: error.rs  fqn.rs  lang_spec.rs  lang_spec_gen.rs  lib.rs  parser.rs  walk.rs
crates/tree-sitter/src/languages/: mod.rs  tree_sitter_ada.rs  tree_sitter_agda.rs  tree_sitter_apex.rs  tree_sitter_asm.rs  tree_sitter_astro.rs  tree_sitter_awk.rs  tree_sitter_bash.rs  tree_sitter_beancount.rs  tree_sitter_bibtex.rs  tree_sitter_bicep.rs  tree_sitter_bitbake.rs  tree_sitter_blade.rs  tree_sitter_c.rs  tree_sitter_c_sharp.rs  tree_sitter_cairo.rs  tree_sitter_capnp.rs  tree_sitter_cfml.rs  tree_sitter_cfscript.rs  tree_sitter_clojure.rs  tree_sitter_cmake.rs  tree_sitter_cobol.rs  tree_sitter_commonlisp.rs  tree_sitter_cpp.rs  tree_sitter_crystal.rs  tree_sitter_css.rs  tree_sitter_csv.rs  tree_sitter_cuda.rs  tree_sitter_d.rs  tree_sitter_dart.rs  tree_sitter_devicetree.rs  tree_sitter_diff.rs  tree_sitter_dockerfile.rs  tree_sitter_dotenv.rs  tree_sitter_elisp.rs  tree_sitter_elixir.rs  tree_sitter_elm.rs  tree_sitter_erlang.rs  tree_sitter_fennel.rs  tree_sitter_fish.rs  (+120 more)
crates/tree-sitter/src/types/: language.rs  mod.rs
(+257 files in other folders)
