cargo-features = ["codegen-backend"]

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["storm-software", "pat-sullivan"]
categories = ["config", "development-tools"]
description = "🔮 Let your models read your mind."
documentation = "https://docs.telepathic.sh"
edition = "2024"
homepage = "https://telepathic.sh"
keywords = ["telepathic", "storm-software"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/storm-software/telepathic"
version = "0.0.1"

[workspace.lints.rust]
dead_code = "allow"
missing-debug-implementations = "allow"
missing-docs = "allow"
rust-2018-idioms = "deny"
unnameable-types = "warn"
unreachable-pub = "warn"
unused-imports = "deny"
unused-must-use = "deny"

[workspace.lints.rustdoc]
all = "allow"

[workspace.lints.clippy]
# Guidelines
# - We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
# - Group are enabled with priority -1, so we could easily override some specific rules.
#   - https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section

# --- restriction https://doc.rust-lang.org/clippy/usage.html#clippyrestriction
allow_attributes = "deny"
dbg_macro = "deny"
print_stdout = "deny"

# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# --- pedantic #https://doc.rust-lang.org/clippy/usage.html#clippypedantic
# To write the best rust code, pedantic group is enabled by default.
case_sensitive_file_extension_comparisons = "allow"
pedantic = { level = "deny", priority = -1 }

# Wizards, naming is too hard.
module_inception = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

# Forwarding `Result` is a common pattern, this rule is too pedantic.
missing_errors_doc = "allow"

# #[must_use] is creating too much noise for this codebase, it does not add much value except nagging
# the programmer to add a #[must_use] after clippy has been run.
# Having #[must_use] everywhere also hinders readability.
must_use_candidate = "allow"

doc_markdown = "allow"
missing_const_for_fn = "allow"
missing_panics_doc = "allow"
needless_for_each = "allow"
new_without_default = "allow"

# Order doesn't really matter https://rust-lang.github.io/rust-clippy/master/index.html#/inconsistent_struct_constructor
inconsistent_struct_constructor = "allow"

# Single match is equally readable as if/else. https://rust-lang.github.io/rust-clippy/master/index.html#/single_match
single_match = "allow"
single_match_else = "allow"

# Though the following are nursery rules, they’re still useful.
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

# Rewriting `unwrap_or` to `map_or` requires to annotate type explicitly which is cumbersome
collapsible_if = "allow"
map_unwrap_or = "allow"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
# Telepathic
telepathic-napi-rs = { path = "./crates/napi-rs" }
telepathic-pyo3 = { path = "./crates/pyo3" }
telepathic-core = { path = "./crates/core" }
telepathic-embedding = { path = "./crates/embedding" }
telepathic-engine = { path = "./crates/engine" }
telepathic-models = { path = "./crates/models" }
telepathic-semantic = { path = "./crates/semantic" }
telepathic-storage = { path = "./crates/storage" }
telepathic-tracing = { path = "./crates/tracing" }
telepathic-tree-sitter = { path = "./crates/tree-sitter" }
telepathic-lsp = { path = "./crates/lsp" }

async-trait = "0.1.89"
ort = { version = "2.0.0-rc.12", default-features = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokenizers = { version = "0.21.4", default-features = false, features = ["onig"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }

lbug = "0.14.1"
anyhow = "1.0.98"
async-channel = "2.5.0"
blake3 = "1.8.2"
camino = { version = "1.2.1", features = ["serde1"] }
chrono = "0.4.30"
config = { version = "0.15.25", features = ["json"] }
cow-utils = "0.1.3"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["debug"] }
dirs = "6.0.0"
fast-glob = "1.0.0"
futures = "0.3.31"
glob = "0.3.3"
memchr = "2.7.6"
mimalloc-safe = "0.1.52"
normalize-code-similarity = "0.3.2"
num_cpus = "1.17.0"
rayon = "1.7.0"
regex = "1.12.2"
regress = "0.10.5"
rustc-hash = { version = "2.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.18"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.19", default-features = false }
tree-sitter = "0.26.10"
tree-sitter-language = "0.1.7"
ts-rs = "11.1.0"
uuid = { version = "1.4.2", features = ["v4", "v5", "serde", "js"] }
whoami = "2.1.2"
xxhash-rust = "0.8.15"

# pyo3
pyo3 = { version = "0.29.0", features = ["extension-module", "experimental-async"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }

# napi
napi = { version = "3.0.0", features = [
    "async",
    "anyhow",
    "napi4",
    "tokio_rt",
] }
napi-build = { version = "2.2.2" }
napi-derive = { version = "3.0.0", default-features = false, features = [
    "type-def",
] }

# C Bindings
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
cc = { version = "1.2.26" }

[profile.dev]
debug = "line-tables-only"
codegen-backend = "cranelift"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"

[profile.release-wasi]
inherits = "release"
opt-level = "s"
# napi-rs generates *-debug.*.wasm files with these information it will strip these information for non-debug files
debug = "full"
strip = "none"
