# [build-system]
# requires = ["setuptools>=61", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "telepathic"
version = "0.0.1"
description = "🔮 Telepathic is a collection of packages and applications that both dramatically reduce your AI token spending, and significantly increase the accuracy of these models."
authors = [{ name = "Storm Software", email = "contact@stormsoftware.com" }, { name = "Patrick Sullivan", email = "patrick@stormsoftware.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
    { name = "Storm Software", email = "contact@stormsoftware.com" },
]

keywords = ["ai", "machine learning", "artificial intelligence", "ml", "ai-token-reduction", "ai-token-optimization", "ai-token-efficiency", "ai-token-saving", "ai-token-reduction", "ai-token-optimization", "ai-token-efficiency", "ai-token-saving"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://telepathic.sh"
Documentation = "https://docs.telepathic.sh"
Repository = "https://github.com/storm-software/telepathic"
Changelog = "https://github.com/storm-software/telepathic/releases"

[tool.pyrefly]
project-includes = ["src/polars", "tests"]
search-path = ["./src", "."]
ignore-missing-imports = [
  "_polars_runtime_32.*",
  "_polars_runtime_64.*",
  "_polars_runtime_compat.*",
  "IPython.*",
  "altair.*",
  "duckdb.*",
  "pyiceberg.*",
]
# pyrefly equivalent of mypy's `follow_imports = "skip"`
replace-imports-with-any = [
  "arrow_odbc.*",
  "jax.*",
  "marimo.*",
  "pyarrow.*",
  "pyiceberg.*",
  "torch.*",
]
# Pyrefly equivalent of mypy ignoring `no-any-return`
# We exclude the polars module from warn_return_any, because the PyO3 api does not have Python
# type annotations. See https://github.com/PyO3/pyo3/issues/1112 for a discussion on adding
# this capability. We could add a stub file for polars._plr (the PyO3 api), but that
# amounts to duplicating almost all type annotations on our api, as the Python api itself is a
# thin wrapper around the PyO3 api to start with.
[[tool.pyrefly.sub-config]]
matches = "src/polars/**"
[tool.pyrefly.sub-config.errors]
bad-return = false

[tool.mypy]
files = ["src/polars", "tests"]
num_workers = 4
strict = true
enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
]
disable_error_code = [
  "empty-body",
  # Lint ignores can become unused depending on the python/mypy versions.
  # Since we want to support multiple versions it can become an annoyance.
  # Consider commenting out this line every once in a while to remove actually unused ignores.
  "unused-ignore",
]

[[tool.mypy.overrides]]
module = ["telepathic.*"]
# We exclude the polars module from warn_return_any, because the PyO3 api does not have Python
# type annotations. See https://github.com/PyO3/pyo3/issues/1112 for a discussion on adding
# this capability. We could add a stub file for polars._plr (the PyO3 api), but that
# amounts to duplicating almost all type annotations on our api, as the Python api itself is a
# thin wrapper around the PyO3 api to start with.
warn_return_any = false

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "D417", # undocumented-param
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT001", # flake8-boolean-trap
  "I", # isort
  "ICN", # flake8-import-conventions
  "INT", # flake8-gettext
  "PERF", # perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
]

ignore = [
  # ------------------------------------------------------------------
  # TODO: Remove errors below to further improve docstring linting
  # ------------------------------------------------------------------
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  # ------------------------------------------------------------------
  "ANN401", # Dynamically typed expressions (Any) are disallowed
  "D401", # Relax NumPy docstring convention: first line should be imperative
  "E501", # Line length regulated by formatter
  "PT011", # pytest.raises is too broad, set match or use a more specific exception
  "PYI041", # Use float instead of int | float
  "RUF022", # `__all__` is not sorted
  "RUF005", # Consider expression instead of concatenation
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "SIM108", # Use ternary operator
  "SIM114", # Combine `if` branches
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]
allowed-confusables = ["µ"]

[tool.ruff.lint.per-file-ignores]
"_dependencies.py" = ["ICN001"]
"config.py" = ["FBT001"]
"tests/**/*.py" = ["ARG", "D100", "D102", "D103", "B018", "F841", "FBT001"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
doctest_optionflags = [
  "DONT_ACCEPT_TRUE_FOR_1",
  "NORMALIZE_WHITESPACE",
  "ELLIPSIS",
]
addopts = [
  "--tb=short",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  # Default to running fast tests only. To run ALL tests, run: pytest -m ""
  "-m not slow and not write_disk and not release and not docs and not hypothesis and not benchmark and not ci_only",
]
markers = [
  "ci_only: Tests that should only run on CI by default.",
  "benchmark: Tests used to benchmark with.",
  "debug: Tests that should be run on a Polars debug build.",
  "docs: Documentation code snippets",
  "release: Tests that should be run on a Polars release build.",
  "slow: Tests with a longer than average runtime.",
  "write_disk: Tests that write to disk",
  "may_fail_auto_streaming: Test that may fail when automatically using the streaming engine for all lazy queries.",
  "may_fail_cloud: Test that may fail when automatically using the cloud distributed engine for all lazy queries.",
  "may_fail_strict: Test that may fail strict mode.",
]
filterwarnings = [
  # Fail on warnings
  "error",
  # Allow debugging in an IPython console
  "ignore:.*unrecognized arguments.*PyDevIPCompleter:DeprecationWarning",
  # Ignore warnings issued by dependency internals
  "ignore:.*is_sparse is deprecated.*:FutureWarning",
  "ignore:FigureCanvasAgg is non-interactive:UserWarning",
  "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated.*:DeprecationWarning",
  "ignore:datetime.datetime.utcnow\\(\\) is deprecated.*:DeprecationWarning",
  # Introspection under PyCharm IDE can generate this in Python 3.12
  "ignore:.*co_lnotab is deprecated, use co_lines.*:DeprecationWarning",
  "ignore:the argument `return_as_string` for `DataFrame.glimpse` is deprecated",
  # Ignore invalid warnings when running earlier versions of SQLAlchemy (we
  # know they are invalid because our standard tests run the latest version)
  "ignore:Deprecated API features detected.*:DeprecationWarning",
  # numpy import can generate this warning in Python 3.13 on certain runners
  "ignore:.*numpy\\.longdouble.*:UserWarning",
  # TODO: https://github.com/pola-rs/polars/issues/20065.
  "ignore:.*DataFrame Interchange Protocol is deprecated",
]
xfail_strict = true

[tool.coverage.run]
source = ["polars"]
branch = true

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "except ImportError",
  "if TYPE_CHECKING:",
  "from typing_extensions import ",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch" },
]
