[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "telepathic"
version = "0.0.1"
description = "🔮 Let your models read your mind — Python bindings for the Telepathic SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Storm Software", email = "contact@stormsoftware.com" },
]
maintainers = [
  { name = "Storm Software", email = "contact@stormsoftware.com" },
]
keywords = [
  "telepathic",
  "storm-software",
  "ai",
  "sdk",
  "pyo3",
  "code-intelligence",
  "source-graph",
  "embeddings",
  "rag",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "maturin>=1.8,<2.0",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://telepathic.sh"
Documentation = "https://docs.telepathic.sh"
Repository = "https://github.com/storm-software/telepathic"
"Bug Tracker" = "https://github.com/storm-software/telepathic/issues"
Changelog = "https://github.com/storm-software/telepathic/releases"

[tool.maturin]
bindings = "pyo3"
manifest-path = "./Cargo.toml"
module-name = "telepathic._telepathic_pyo3"
python-source = "src"
python-packages = ["telepathic"]
sdist-generator = "git"
strip = true
include = [
  { path = "README.md", format = ["sdist", "wheel"] },
  { path = "LICENSE", format = ["sdist", "wheel"] },
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "SIM",
  "TCH",
  "ANN",
  "S",
  "N",
  "PTH",
  "RUF",
]
ignore = [
  "ANN401",
  "E501",
  "S101",
]

[tool.ruff.lint.isort]
known-first-party = ["telepathic"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
files = ["src/telepathic", "tests"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["telepathic._telepathic_pyo3"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
