[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = '🔮 Node.js Bindings for the Telepathic runtime.'
documentation = 'https://docs.rs/telepathic'
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = 'telepathic-napi-rs'
publish       = false
readme        = './README.md'
repository    = { workspace = true }
version       = '0.0.1'

[lints]
workspace = true

[lib]
crate-type = ['cdylib']
doctest    = false

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true, features = ['serde'] }
derive_more = { workspace = true }
fast-glob = { workspace = true }
futures = { workspace = true }
memchr = { workspace = true }
napi = { workspace = true, features = [
  'async',
  'anyhow',
  'napi6',
  'serde-json',
  'tokio_rt'
] }
napi-derive = { workspace = true }
num_cpus = { workspace = true }
telepathic-core = { workspace = true }
telepathic-engine = { workspace = true }
telepathic-tracing = { workspace = true }
regex = { workspace = true }
regress = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi    = { version = '0.3', features = ['fileapi', 'psapi'] }
cow-utils = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = '0.1'

[target.'cfg(all(not(target_os = "linux"), not(target_os = "freebsd"), not(target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, features = ['skip_collect_on_exit'] }

[target.'cfg(all(any(target_os = "linux", target_os = "freebsd"), not(target_arch = "aarch64"), not(target_env = "ohos")))'.dependencies]
mimalloc-safe = { workspace = true, features = [
  'skip_collect_on_exit',
  'local_dynamic_tls'
] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, features = [
  'skip_collect_on_exit',
  'no_opt_arch',
  'local_dynamic_tls'
] }

[build-dependencies]
napi-build       = { workspace = true }
static_vcruntime = { version = '3.0' }

[features]
default_global_allocator = []
