[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = 'Algorithmic code embeddings: TF-IDF, Random Indexing, and combined semantic scoring.'
documentation = 'https://docs.rs/telepathic'
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = 'telepathic-semantic'
publish       = true
readme        = './README.md'
repository    = { workspace = true }
version       = '0.0.1'

[lib]
doctest = false

[lints]
workspace = true

[features]
ast-minhash      = ['dep:normalize-code-similarity', 'dep:tree-sitter']
default          = ['ast-minhash']
nomic-pretrained = []

[dependencies]
normalize-code-similarity = { workspace = true, optional = true }
rustc-hash                = { workspace = true }
tree-sitter               = { workspace = true, optional = true }
xxhash-rust               = { workspace = true, features = ['xxh3'] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = { workspace = true }

[dev-dependencies]
tempfile = '3.20.0'
