[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = 'Algorithmic code embeddings: TF-IDF, Random Indexing, and combined semantic scoring.'
documentation = 'https://docs.rs/telepathic'
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = 'telepathic-semantic'
publish       = true
readme        = './README.md'
repository    = { workspace = true }
version       = '0.0.1'

[lib]
doctest = false

[lints]
workspace = true

[features]
# On wasm, normalize-code-similarity is omitted (pulls libsql → socket2, which
# does not support wasm32-wasip1-threads). Feature still enables tree-sitter;
# ast_minhash module is cfg-gated off wasm in lib.rs.
ast-minhash      = ['dep:tree-sitter']
default          = ['ast-minhash']
nomic-pretrained = []

[dependencies]
rustc-hash  = { workspace = true }
tree-sitter = { workspace = true, optional = true }
xxhash-rust = { workspace = true, features = ['xxh3'] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Always present on native (default feature enables ast-minhash). Not optional:
# listing it under `dep:` in features breaks wasm builds where this target dep
# is absent.
normalize-code-similarity = { workspace = true }
rayon                     = { workspace = true }

[dev-dependencies]
tempfile = '3.20.0'
