[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = 'Tracing utilities for the Telepathic runtime.'
documentation = 'https://docs.rs/telepathic'
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = 'telepathic-tracing'
publish       = false
readme        = './README.md'
repository    = { workspace = true }
version       = '0.0.1'

[lib]
doctest = false

[lints]
workspace = true

[features]
default      = ['serde']
experimental = []
serde        = ['dep:serde']
testing      = []

[dependencies]
blake3             = { workspace = true }
dashmap            = { workspace = true }
rustc-hash         = { workspace = true }
serde              = { workspace = true, optional = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-chrome     = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs              = { workspace = true }
