[package]
name = "telepathic-desktop"
version.workspace = true
authors.workspace = true
description = "Telepathic desktop application"
edition = "2024"
license.workspace = true
repository.workspace = true

[lib]
name = "telepathic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
